# rumqtt

./: .gitignore
.cargo/: config.toml
rumqttd/: Cargo.toml  build_android.ps1
rumqttd/examples/android/: BrokerActivity.kt  README.md  RumqttdBridge.kt  activity_broker.xml  item_connection.xml
rumqttd/examples/android-app/: README.md  settings.gradle
rumqttd/examples/android-app/app/: build.gradle
rumqttd/examples/android-app/app/src/main/: AndroidManifest.xml
rumqttd/examples/android-app/app/src/main/cpp/: CMakeLists.txt  RumqttdJNI.c
rumqttd/examples/android-app/app/src/main/java/com/example/rumqttd/: BrokerActivity.kt  BrokerModels.kt
rumqttd/examples/android-app/app/src/main/jniLibs/: .gitkeep
rumqttd/examples/android-app/app/src/main/res/layout/: activity_broker.xml  item_connection.xml
rumqttd/examples/android-app/app/src/main/res/values/: strings.xml  themes.xml
rumqttd/include/: rumqttd.h
rumqttd/src/: ffi.rs  lib.rs
rumqttd/src/link/: bridge.rs  local.rs  remote.rs
rumqttd/src/router/: connection.rs  mod.rs  routing.rs
rumqttd/src/server/: broker.rs
